# property-list

./: TODO  property-list.cabal
depracted/: PropertyListItem.hs
depracted/Algebra/: Primitives.hs
src/Data/: PropertyList.hs
src/Data/PropertyList/: Algebra.hs  Binary.hs  GetStuff.hs  KeyPath.hs  Object.hs  Parse.hs  PropertyListItem.hs  SetStuff.hs  Type.hs  Types.hs  Xml.hs
src/Data/PropertyList/Binary/: Algebra.hs  Float.hs  Get.hs  Linearize.hs  Parse.hs  Put.hs  Types.hs
src/Data/PropertyList/Xml/: Algebra.hs  Dtd.hs  Dtd_1_13.hs  Parse.hs  Types.hs
tests/: ArbitraryPList.hs  BPLists.hs  CloseEnough.hs  Xml.hs
