name:                   property-list
version:                0.0.1.0
stability:              experimental
license:                PublicDomain

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <james.cook@usma.edu>
maintainer:             James Cook <james.cook@usma.edu>
homepage:               http://code.haskell.org/~mokus/property-list

category:               Data, Parsing, XML
synopsis:               XML property list parser
description:            Parser, data type and formatter for Apple's XML property list 1.0 format.

flag new-data-object
  description:          Use the new version of the data-object package (>= 0.0.2)
                        Which has a "generic object" type in place of the simpler
                        Object type in previous versions.
  default:              True

flag new-template-haskell
  description:          Template Haskell 2.4 seems to have made the
                        generated @PropertyListItem OneOfN@ instances break.
                        So, detect it and deal with it.

flag HaXml_1_13
  default:              False
  description:          The Hackage website builder is currently very finicky
                        and the bytestring-0.9.1.5 update has made me very
                        frustrated, because the last several versions of this
                        package have failed to build because of it.  
                        The "preferred-versions" fallback fails too, because
                        the additional HaXml constraint combined with the
                        one here becomes unsatisfiable.  So, I'm gonna make
                        this thing work with HaXml 1.13 now.  
                        
                        And, as an additional hack to make sure it works, 
                        this flag will also trigger dependencies on specific 
                        versions of packages known to have been built against 
                        bytestring-0.9.1.4 on the hackage server.
                        
                        Once ghc-6.12 is released, this should no longer be
                        a problem and I can clean up the mess I've made here.
                        

Library
  hs-source-dirs:       src
  ghc-options:          -fwarn-unused-binds -fwarn-unused-imports
  exposed-modules:      Data.PropertyList
                        Data.PropertyList.Algebra
                        Data.PropertyList.Xml
                        
  other-modules:        Data.PropertyList.Types
                        Data.PropertyList.PropertyListItem
                        Data.PropertyList.KeyPath
                        Data.PropertyList.Xml.Parse
                        Data.PropertyList.Xml.Types
  build-depends:        base >= 3 && <5,
                        bytestring,
                        bytestring-class,
                        category-extras,
                        containers, 
                        dataenc,
                        mtl,
                        old-locale,
                        pretty,
                        template-haskell,
                        time,
                        th-fold

  if flag(HaXml_1_13)
    other-modules:      Data.PropertyList.Xml.Dtd_1_13
    cpp-options:        -DHaXml_1_13
    build-depends:      HaXml >= 1.13 && <1.14
    
    if impl(ghc >= 6.10 && < 6.11)
                        bytestring == 0.9.1.4,
                        bytestring-class == 0.0.0,
                        
                        utf8-string == 0.3.5
                        -- (transitive dependency brought in by bytestring-class)
                        
  else
    other-modules:      Data.PropertyList.Xml.Dtd
    build-depends:      HaXml >= 1.19