name:                   property-list
version:                0.1
stability:              experimental
license:                PublicDomain

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <james.cook@usma.edu>
maintainer:             James Cook <james.cook@usma.edu>
homepage:               http://code.haskell.org/~mokus/property-list

category:               Data, Parsing, XML
synopsis:               XML property list parser
description:            Parser, data type and formatter for Apple's XML property list 1.0 format.

source-repository head
  type:                 git
  location:             git://github.com/mokus0/property-list.git

flag HaXml_1_13
  default:              False
  description:          Compile against HaXml 1.13 rather than the latest.

Library
  hs-source-dirs:       src
  ghc-options:          -fwarn-unused-binds -fwarn-unused-imports
  exposed-modules:      Data.PropertyList
                        Data.PropertyList.Algebra
                        Data.PropertyList.Binary
                        Data.PropertyList.Xml
                        
  other-modules:        Data.PropertyList.Types
                        Data.PropertyList.Binary.Algebra
                        Data.PropertyList.Binary.Linearize
                        Data.PropertyList.Binary.Parse
                        Data.PropertyList.Binary.Put
                        Data.PropertyList.Binary.Types
                        Data.PropertyList.PropertyListItem
                        Data.PropertyList.KeyPath
                        Data.PropertyList.Xml.Parse
                        Data.PropertyList.Xml.Types
  build-depends:        base >= 4 && <5,
                        attoparsec,
                        attoparsec-binary,
                        binary,
                        bytestring,
                        containers, 
                        data-binary-ieee754,
                        dataenc,
                        free >= 1.8,
                        mtl,
                        old-locale,
                        pointed >= 1.8,
                        pretty,
                        recursion-schemes >= 1.8,
                        syb,
                        template-haskell,
                        text,
                        time,
                        th-fold,
                        vector,
                        void

  if flag(HaXml_1_13)
    other-modules:      Data.PropertyList.Xml.Dtd_1_13
    cpp-options:        -DHaXml_1_13
    build-depends:      HaXml >= 1.13 && <1.14
                        
  else
    other-modules:      Data.PropertyList.Xml.Dtd
    build-depends:      HaXml >= 1.19
    build-depends:      HaXml < 1.22 || > 1.22